Begin lockss-solr 7.2.1-alpine release.

--- a/lockss-solr/Dockerfile
+++ b/lockss-solr/Dockerfile
@@ -27,9 +27,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-alpine:3.15.0-SNAPSHOT AS lockss-alpine
+FROM lockss/lockss-alpine:3.15.0 AS lockss-alpine
 
-FROM lockss/lockss-files-log4j:2.16.0-SNAPSHOT AS lockss-files-log4j
+FROM lockss/lockss-files-log4j:2.16.0 AS lockss-files-log4j
 
 FROM solr:7.2.1-alpine
 
