--- a/lockss-solr/Dockerfile
+++ b/lockss-solr/Dockerfile
@@ -27,6 +27,8 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
+# FIXME
+
 FROM lockss/lockss-alpine:3.15.0-SNAPSHOT AS lockss-alpine
 
 FROM lockss/lockss-files-log4j:2.16.0-SNAPSHOT AS lockss-files-log4j
