Begin lockss-openwayback-2.4.0-4 release.

--- a/lockss-openwayback/Dockerfile
+++ b/lockss-openwayback/Dockerfile
@@ -27,9 +27,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-debian:9.13-slim-2-SNAPSHOT AS lockss-debian
+FROM lockss/lockss-debian:9.13-slim AS lockss-debian
 
-FROM lockss/lockss-files-log4j:2.17.1-1-SNAPSHOT AS lockss-files-log4j
+FROM lockss/lockss-files-log4j:2.17.1-1 AS lockss-files-log4j
 
 FROM iipc/openwayback:openwayback-2.4.0
 
