--- a/lockss-solr/Dockerfile
+++ b/lockss-solr/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) 2000-2021, Board of Trustees of Leland Stanford Jr. University
+# Copyright (c) 2000-2022, Board of Trustees of Leland Stanford Jr. University
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -29,7 +29,7 @@
 
 FROM lockss/lockss-debian11:11.1-slim AS lockss-debian11
 
-FROM lockss/lockss-files-log4j:2.16.0-2 AS lockss-files-log4j
+FROM lockss/lockss-files-log4j:2.17.1-1 AS lockss-files-log4j
 
 FROM solr:8.9.0-slim
 
@@ -49,13 +49,18 @@ RUN ipm-update \
  && ipm-clean
 
 # Log4j mitigation
+RUN rm /opt/solr-8.9.0/server/lib/ext/log4j*.jar
+COPY --from=lockss-files-log4j /lockss-files-log4j/log4j-1.2-api-*.jar \
+                               /lockss-files-log4j/log4j-api-*.jar \
+                               /lockss-files-log4j/log4j-core-*.jar \
+                               /lockss-files-log4j/log4j-slf4j-impl-*.jar \
+                               /lockss-files-log4j/log4j-web-*.jar \
+                               /opt/solr-8.9.0/server/lib/ext/
 RUN rm /opt/solr-8.9.0/contrib/prometheus-exporter/lib/log4j*.jar
 COPY --from=lockss-files-log4j /lockss-files-log4j/log4j-api-*.jar \
                                /lockss-files-log4j/log4j-core-*.jar \
                                /lockss-files-log4j/log4j-slf4j-impl-*.jar \
                                /opt/solr-8.9.0/contrib/prometheus-exporter/lib/
-RUN rm /opt/solr-8.9.0/server/lib/ext/log4j*.jar
-COPY --from=lockss-files-log4j /lockss-files-log4j/log4j*.jar /opt/solr-8.9.0/server/lib/ext/
 
 COPY /docker/bin/* /usr/local/bin/
 
