--- a/lockss-spring/Dockerfile
+++ b/lockss-spring/Dockerfile
@@ -26,7 +26,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-alpine:3.15.0-2-SNAPSHOT as lockss-alpine
+FROM lockss/lockss-alpine:3.15.0-3 as lockss-alpine
 
 FROM adoptopenjdk/openjdk8:jdk8u292-b10-alpine
 
