--- a/lockss-spring/Dockerfile
+++ b/lockss-spring/Dockerfile
@@ -1,5 +1,4 @@
-# Copyright (c) 2000-2021, Board of Trustees of Leland Stanford Jr. University
-# All rights reserved.
+# Copyright (c) 2000-2023, Board of Trustees of Leland Stanford Jr. University
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -27,7 +26,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-alpine:3.15.0 as lockss-alpine
+FROM lockss/lockss-alpine:3.15.0-3 as lockss-alpine
 
 FROM adoptopenjdk/openjdk8:jdk8u292-b10-alpine
 
