Upgrade to 8u372. Add GNU Wget 1.21.1.

--- a/lockss-spring/Dockerfile
+++ b/lockss-spring/Dockerfile
@@ -26,9 +26,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-alpine:3.15.0-2-SNAPSHOT as lockss-alpine
+FROM lockss/lockss-alpine:3.18.0-1-SNAPSHOT as lockss-alpine
 
-FROM adoptopenjdk/openjdk8:jdk8u292-b10-alpine
+FROM adoptopenjdk/openjdk8:jdk8u372-b07-alpine
 
 COPY --from=lockss-alpine /usr/local/etc/ipm/* /usr/local/etc/ipm/
 COPY --from=lockss-alpine /usr/local/bin/* /usr/local/bin/
@@ -133,6 +133,7 @@ RUN ipm-update \
                 jq \
                 netcat \
                 tzdata \
+                wget \
  && ipm-clean \
  && mkdir -m 0755 "${LOCKSS_HOME}" \
  && mkdir -m 0777 "${LOCKSS_HOME}/etc"
