--- a/lockss-alpine/Dockerfile
+++ b/lockss-alpine/Dockerfile
@@ -26,7 +26,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-ipm:2.6.0-SNAPSHOT as lockss-ipm
+FROM lockss/lockss-ipm:2.6.0 as lockss-ipm
 
 FROM alpine:3.19.1
 
