--- a/lockss-alpine/bin/build
+++ b/lockss-alpine/bin/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# Copyright (c) 2000-2024, Board of Trustees of Leland Stanford Jr. University
+# Copyright (c) 2000-2023, Board of Trustees of Leland Stanford Jr. University
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -33,7 +33,7 @@ TAG_FILE="${ROOT_DIR}/VERSION"
 TAG="lockss/lockss-alpine:$(cat "${TAG_FILE}")"
 
 PUSH=''
-if [ "${1}" = '--push' ]; then
+if [ "${1}" == '--push' ]; then
   PUSH='true'
   shift
 fi
