--- a/lockss-spring/Dockerfile
+++ b/lockss-spring/Dockerfile
@@ -26,7 +26,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-alpine:3.19.1-1-SNAPSHOT as lockss-alpine
+FROM lockss/lockss-alpine:3.19.1-1 as lockss-alpine
 
 FROM eclipse-temurin:17.0.10_7-jre-alpine
 
