Image for Pywb 2.8.3.

--- a/lockss-pywb/Dockerfile
+++ b/lockss-pywb/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) 2000-2023, Board of Trustees of Leland Stanford Jr. University
+# Copyright (c) 2000-2024, Board of Trustees of Leland Stanford Jr. University
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -26,9 +26,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-debian:9.13-slim-3-SNAPSHOT AS lockss-debian
+FROM lockss/lockss-debian12:12.7-slim-1-SNAPSHOT AS lockss-debian
 
-FROM webrecorder/pywb:2.4.2
+FROM webrecorder/pywb:2.8.3
 
 MAINTAINER "LOCKSS Buildmaster" <buildmaster@lockss.org>
 
