--- a/lockss-debian12/Dockerfile
+++ b/lockss-debian12/Dockerfile
@@ -1,5 +1,3 @@
-#!/bin/sh
-
 # Copyright (c) 2000-2024, Board of Trustees of Leland Stanford Jr. University
 #
 # Redistribution and use in source and binary forms, with or without
@@ -28,17 +26,13 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG_FILE="${ROOT_DIR}/VERSION"
-TAG="lockss/lockss-debian11:$(cat "${TAG_FILE}")"
+FROM lockss/lockss-ipm:2.7.0-SNAPSHOT AS lockss-ipm
 
-PUSH=''
-if [ "${1}" = '--push' ]; then
-  PUSH='true'
-  shift
-fi
+FROM debian:12.7-slim
 
-docker build --tag "${TAG}" "$@" "${ROOT_DIR}" \
-&& if [ -n "${PUSH}" ]; then
-     docker push "${TAG}"
-   fi
+MAINTAINER "LOCKSS Buildmaster" <buildmaster@lockss.org>
+
+# Install IPM
+COPY --from=lockss-ipm /usr/local/etc/ipm/* /usr/local/etc/ipm/
+COPY --from=lockss-ipm /usr/local/bin/* /usr/local/bin/
+RUN ipm-setup apt-transport-https
