--- a/lockss-debian12/bin/build
+++ b/lockss-debian12/bin/build
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# Copyright (c) 2000-2022, Board of Trustees of Leland Stanford Jr. University
+# Copyright (c) 2000-2024, Board of Trustees of Leland Stanford Jr. University
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -28,4 +28,17 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-apt-get --assume-yes clean
+ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
+TAG_FILE="${ROOT_DIR}/VERSION"
+TAG="lockss/lockss-debian12:$(cat "${TAG_FILE}")"
+
+PUSH=''
+if [ "${1}" = '--push' ]; then
+  PUSH='true'
+  shift
+fi
+
+docker build --tag "${TAG}" "$@" "${ROOT_DIR}" \
+&& if [ -n "${PUSH}" ]; then
+     docker push "${TAG}"
+   fi
